Thu Jan 27 12:46:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (ALLOC_ARGV_WITH_STR): fix void pointer arithmetic.

Thu Jan 27 08:41:40 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_exec_v, rb_proc_exec_n, rb_proc_exec)
	  (proc_spawn_n, proc_spawn): get rid of too huge alloca().
	  [ruby-core:34827], [ruby-core:34833]

Thu Jan 27 08:32:17 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ALLOCV): new API for exception-safe
	  temporary buffer.  [ruby-core:34844]

	* string.c (rb_alloc_tmp_buffer, rb_free_tmp_buffer):
	  implementation of the API.

Thu Jan 27 08:22:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln_find.c (dln_find_1): use rb_warning and return immediately
	  if fname is longer than buffer.

Wed Jan 26 22:57:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* class.c (clone_method): add GC guard to prevent intermediate
	  variable from GC. [Bug #4321] [ruby-dev:43107]

Wed Jan 26 22:45:16 2011  Tanaka Akira  <akr@fsij.org>

	* template/id.h.tmpl: parenthesize macro arguments.

Wed Jan 26 22:28:49 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_eval.c (rb_throw_obj): add GC guard to prevent intermediate
	  variable from GC. [Bug #4322] [ruby-dev:43108]

Wed Jan 26 17:08:59 2011  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_decode0): OpenSSL::ASN1.decode
	  should reject indefinite length primitive encodings as that is
	  illegal. Patch by Martin Bosslet. See #4324.

Wed Jan 26 10:36:28 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (=~): documentation fix; the return value is nil when
	  it doesn't match. patched by Andrei Kulakov [ruby-core:34562]

Tue Jan 25 08:41:58 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln_find.c (dln_find_1): omit too long pathnames.

Tue Jan 25 08:28:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_resize): get rid of out-of-bound access.
